crates/paigasus-helikon-macros/tests/ui/bad_out_not_serialize.stderr
error[E0277]: the trait bound `O: serde::Serialize` is not satisfied
  --> tests/ui/bad_out_not_serialize.rs:15:1
   |
15 | #[tool]
   | ^^^^^^^ unsatisfied trait bound
   |
help: the trait `_serde::Serialize` is not implemented for `O`
  --> tests/ui/bad_out_not_serialize.rs:12:1
   |
12 | struct O {}
   | ^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `O` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `_serde::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `&O` to implement `_serde::Serialize`
note: required by a bound in `to_value`
  --> $CARGO/serde_json-$VERSION/src/value/mod.rs
   |
   | pub fn to_value<T>(value: T) -> Result<Value, Error>
   |        -------- required by a bound in this function
   | where
   |     T: Serialize,
   |        ^^^^^^^^^ required by this bound in `to_value`
   = note: this error originates in the attribute macro `tool` (in Nightly builds, run with -Z macro-backtrace for more info)
